turtleart.disktwo.DiskTwo.scala.error
Compilation error:
DiskTwo:4: error: type mismatch;
 found   : Double(20.0)
 required: Int
  for (i <- 0 to 90.0/4.5 by 1) {
                     ^