turtleart.disktwo.DiskTwo.scala.code
def draw (rayon:Double, color:Color) {
  setColor(color);
  penDown();
  for (i <- 0 to 90.0/4.5 by 1) {
    forward(rayon);
    backward(rayon);
    right(1);
  }
}

override def run() {
  for (i <- 0 to 8) {
  	draw(100.0, Color.black);
  	draw(100.0, Color.red);
  }
}